refactor: types related to blockchain and its conversion
